temba/contacts/search/gen/SearchParser.py
# Generated from Search.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class SearchParser ( Parser ):

    grammarFileName = "Search.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'" ]

    symbolicNames = [ u"<INVALID>", u"LPAREN", u"RPAREN", u"AND", u"OR", 
                      u"COMPARATOR", u"TEXT", u"STRING", u"WS", u"ERROR" ]

    RULE_parse = 0
    RULE_expression = 1
    RULE_literal = 2

    ruleNames =  [ u"parse", u"expression", u"literal" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    AND=3
    OR=4
    COMPARATOR=5
    TEXT=6
    STRING=7
    WS=8
    ERROR=9

    def __init__(self, input, output=sys.stdout):
        super(SearchParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SearchParser.ParseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SearchParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(SearchParser.EOF, 0)

        def getRuleIndex(self):
            return SearchParser.RULE_parse

        def accept(self, visitor):
            if hasattr(visitor, "visitParse"):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = SearchParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 6
            self.expression(0)
            self.state = 7
            self.match(SearchParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SearchParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SearchParser.RULE_expression

     
        def copyFrom(self, ctx):
            super(SearchParser.ExpressionContext, self).copyFrom(ctx)


    class ImplicitConditionContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a SearchParser.ExpressionContext)
            super(SearchParser.ImplicitConditionContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TEXT(self):
            return self.getToken(SearchParser.TEXT, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitImplicitCondition"):
                return visitor.visitImplicitCondition(self)
            else:
                return visitor.visitChildren(self)


    class ConditionContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a SearchParser.ExpressionContext)
            super(SearchParser.ConditionContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TEXT(self):
            return self.getToken(SearchParser.TEXT, 0)
        def COMPARATOR(self):
            return self.getToken(SearchParser.COMPARATOR, 0)
        def literal(self):
            return self.getTypedRuleContext(SearchParser.LiteralContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitCondition"):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)


    class CombinationAndContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a SearchParser.ExpressionContext)
            super(SearchParser.CombinationAndContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SearchParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SearchParser.ExpressionContext,i)

        def AND(self):
            return self.getToken(SearchParser.AND, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitCombinationAnd"):
                return visitor.visitCombinationAnd(self)
            else:
                return visitor.visitChildren(self)


    class CombinationImpicitAndContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a SearchParser.ExpressionContext)
            super(SearchParser.CombinationImpicitAndContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SearchParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SearchParser.ExpressionContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitCombinationImpicitAnd"):
                return visitor.visitCombinationImpicitAnd(self)
            else:
                return visitor.visitChildren(self)


    class CombinationOrContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a SearchParser.ExpressionContext)
            super(SearchParser.CombinationOrContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SearchParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SearchParser.ExpressionContext,i)

        def OR(self):
            return self.getToken(SearchParser.OR, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitCombinationOr"):
                return visitor.visitCombinationOr(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionGroupingContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a SearchParser.ExpressionContext)
            super(SearchParser.ExpressionGroupingContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(SearchParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(SearchParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(SearchParser.RPAREN, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitExpressionGrouping"):
                return visitor.visitExpressionGrouping(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SearchParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = SearchParser.ExpressionGroupingContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 10
                self.match(SearchParser.LPAREN)
                self.state = 11
                self.expression(0)
                self.state = 12
                self.match(SearchParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = SearchParser.ConditionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 14
                self.match(SearchParser.TEXT)
                self.state = 15
                self.match(SearchParser.COMPARATOR)
                self.state = 16
                self.literal()
                pass

            elif la_ == 3:
                localctx = SearchParser.ImplicitConditionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 17
                self.match(SearchParser.TEXT)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 30
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 28
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = SearchParser.CombinationAndContext(self, SearchParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 20
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 21
                        self.match(SearchParser.AND)
                        self.state = 22
                        self.expression(7)
                        pass

                    elif la_ == 2:
                        localctx = SearchParser.CombinationImpicitAndContext(self, SearchParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 23
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 24
                        self.expression(6)
                        pass

                    elif la_ == 3:
                        localctx = SearchParser.CombinationOrContext(self, SearchParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 25
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 26
                        self.match(SearchParser.OR)
                        self.state = 27
                        self.expression(5)
                        pass

             
                self.state = 32
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SearchParser.LiteralContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SearchParser.RULE_literal

     
        def copyFrom(self, ctx):
            super(SearchParser.LiteralContext, self).copyFrom(ctx)



    class StringLiteralContext(LiteralContext):

        def __init__(self, parser, ctx): # actually a SearchParser.LiteralContext)
            super(SearchParser.StringLiteralContext, self).__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(SearchParser.STRING, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitStringLiteral"):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)


    class TextLiteralContext(LiteralContext):

        def __init__(self, parser, ctx): # actually a SearchParser.LiteralContext)
            super(SearchParser.TextLiteralContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TEXT(self):
            return self.getToken(SearchParser.TEXT, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitTextLiteral"):
                return visitor.visitTextLiteral(self)
            else:
                return visitor.visitChildren(self)



    def literal(self):

        localctx = SearchParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SearchParser.TEXT]:
                localctx = SearchParser.TextLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(SearchParser.TEXT)
                pass
            elif token in [SearchParser.STRING]:
                localctx = SearchParser.StringLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.match(SearchParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx, ruleIndex, predIndex):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx, predIndex):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         




